Revert "docs and logic patch"
