# docs/swagger.json
@@ -67,7 +67,7 @@
             "post": {
                 "description": "Create new daily offer",
                 "consumes": [
-                    "multipart/form-data"
+                    "application/json"
                 ],
                 "produces": [
                     "application/json"
@@ -82,13 +82,6 @@
                         "description": "JWT Token for Auth",
                         "name": "Authorization",
                         "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "file",
-                        "description": "this is a test file",
-                        "name": "file",
-                        "in": "formData",
                         "required": true
                     }
                 ],
@@ -127,7 +120,7 @@
             }
         },
         "/dailyOffer/{id}": {
-            "delete": {
+            "get": {
                 "description": "Delet daily offer by offer id",
                 "tags": [
                     "Daily Offer"
