# handlers/daily_offers_handler.go
@@ -12,10 +12,9 @@ import (
 // @Summary      		Create Daily Offer
 // @Description  		Create new daily offer
 // @Tags         		Daily Offer
-// @Accept 				multipart/form-data
+// @Accept       		application/json
 // @Produce      		application/json
 // @Param		 		Authorization header string true "JWT Token for Auth"
-// @Param 				file formData file true "this is a test file"
 // @Success      		201  {object} helpers.ResponseBody
 // @Failure      		401  {object} helpers.ResponseBody
 // @Failure      		403  {object} helpers.ResponseBody
@@ -131,7 +130,7 @@ func (h *Handlers) GetDailyOfferByRestaurantID(ctx *gin.Context) {
 // @Failure      		403  {object} helpers.ResponseBody
 // @Failure      		404  {object} helpers.ResponseBody
 // @Failure      		500  {object} helpers.ResponseBody
-// @Router       		/dailyOffer/{id} [delete]
+// @Router       		/dailyOffer/{id} [get]
 func (h *Handlers) DeleteDailyOffer(ctx *gin.Context) {
 	dailyOfferID, err := strconv.Atoi(ctx.Param("id"))
 	if err != nil {
